<resources>
    <string name="app_name">InstagramClone</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Paste BOTH strings as required -->
    <string name="back4app_app_id">5IJWi0JjtRmQtYcpmLSDxBJutTxFx44mJiPtXsk3</string>
    <string name="back4app_client_key">EgzCyj9iX3eYR96md86Si1fZV28u3OGaAERmbfCX</string>
    <string name="description">description</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="password">password</string>
    <string name="username">UserName</string>
    <string name="instagram">Instagram</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_10">10</string>
    <string name="following">Following</string>
    <string name="bprospere">bprospere</string>
    <string name="logout">Logout</string>
    <string name="submitprofile">SubmitProfile</string>
    <string name="save">Save</string>
    <string name="comment">comment</string>
    <string name="add_a_comment">add_a_comment</string>
    <string name="edit_profile">Edit Profile</string>
</resources>