<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageProfile"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-1dp"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="@string/bprospere" />

    <Button
        android:id="@+id/editProfile"
        android:layout_width="394dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUsername"
        android:layout_alignParentStart="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="-2dp"
        android:text="@string/edit_profile"
        android:backgroundTint="@color/vert" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/blue"
        android:layout_marginBottom="5dp"
        android:text="@string/logout" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/btnLogout"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="5dp"
        android:background="?android:attr/listDivider" />

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="387dp"
        android:layout_below="@+id/divider1"
        android:layout_marginTop="5dp"
        android:numColumns="2"
        android:stretchMode="columnWidth" />




</RelativeLayout>